# Viper

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  mkdocs.yml  pyproject.toml  setup.py
docs/: index.md
site/: 404.html  index.html  objects.inv
site/search/: search_index.json
src/viper/: __init__.py
src/viper/ColorWheel/: Color.py  ColorWheel.py  color_list.txt
src/viper/main_plotting/: Figure.py  boxplot.py  pairplot.py
src/viper/plot_annotations/: __init__.py  jitter_array.py  legend.py  stat_annotation.py
src/viper/stylesheets/: __init__.py
viper/: __init__.py
viper/ColorWheel/: Color.py  ColorWheel.py  Palette.py
viper/StyleSheets/: __init__.py  viper_dark.mplstyle  viper_light.mplstyle
viper/color_wheel/: __init__.py  color_wheel.py  conversion.py
viper/icons/: get_icons.py
viper/main_plotting/: Figure.py  __init__.py  boxplot.py  pairplot.py
viper/plot_annotations/: jitter_array.py  legend.py  stat_annotation.py
viperviz/: __init__.py
viperviz/ColorWheel/: init.py
viperviz/icons/: __init__.py  get_icons.py
viperviz/main_plotting/: Pair_Plot.py  __init__.py  boxplot.py
viperviz/plot_annotations/: jitter_array.py  legend.py
